# VkGuide

./: .clang-format  .gitignore  CMakeLists.txt
Assets/Shaders/: ColoredTriangle.vert.spv  ColoredTriangleMesh.vert.spv  Gradient.comp  GradientColor.comp.spv  Sky.comp.spv
Modules/Application/: CMakeLists.txt
Modules/Application/Include/VkGuide/: VkGuide.hpp
Modules/Application/Sources/: Main.cpp
Modules/Engine/: CMakeLists.txt
Modules/Engine/Include/VkGuide/: Defines.hpp  Engine.hpp  VkCamera.hpp  VkDescriptors.hpp  VkInitializers.hpp  VkInits.hpp  VkLoader.hpp  VkPipelines.hpp  VkTypes.hpp  VkUtils.hpp
Modules/Engine/Sources/: Engine.cpp  VkCamera.cpp  VkDescriptors.cpp  VkInitializers.cpp  VkInits.cpp  VkLoader.cpp  VkPipelines.cpp  VkUtils.cpp
